--- a/index.ejs
+++ b/index.ejs
@@ -1,12 +1,12 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>JP & R</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
 <div>
     <div id="react-root"></div>
     <script type="text/javascript" src="index.js"></script>
 </div>
-<script src="index.js"></script></body>
+</body>
 </html>
